# sodl

./: .clang-format  LICENSE  README.md
examples/: CMakeLists.txt  dynamic.hpp
examples/load_class/: app.cpp  class_template.hpp  plugin_cat.cpp  plugin_dog.cpp  plugin_robot.cpp
examples/load_function/: app.cpp  plugin_cat.cpp  plugin_dog.cpp  plugin_robot.cpp
include/: sodl.hpp
